--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,7 +1,10 @@
 {
   "plugins": [
-    ["@semantic-release/npm", {
-      "npmPublish": false,
-    }],
+    [
+      "@semantic-release/npm",
+      {
+        "npmPublish": false
+      }
+    ]
   ]
 }
