--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,14 +28,8 @@ jobs:
         with:
           node-version: "lts/*"
       
-      - uses: ChanTsune/release-with-commit@v2.8.0
-        with:
-          regexp: "Release ((\\d+([.]\\d+)*)-(alpha|beta|rc)\\d*)((\\s|\\S)*)"
-          regexp_options: "us"
-          release_name: "version $1"
-          tag_name: "v$1"
-          body: "$5"
-          draft: false
-          prerelease: false
+      - name: Release
         env:
-          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ""
+        run: npx semantic-release --ci false
