feat: resolve unit test step on pipeline and forcing generate the release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           go-version: '1.24'
       - name: Run tests
-        run: go test ./... -v
+        run: go test ./test -v
 
   release:
     needs: unit-test
